Fix warning.